--- a/app/src/main/res/layout/activity_the_dying_message.xml
+++ b/app/src/main/res/layout/activity_the_dying_message.xml
@@ -19,64 +19,66 @@
         app:srcCompat="@mipmap/ptsd_the_dying_message" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="119dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="56dp"
+        android:id="@+id/The_Dying_Message"
+        android:layout_width="314dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="208dp"
         android:text="The Dying Message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:id="@+id/E"
+        android:layout_width="138dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
         android:text="E"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="86dp"
+        android:id="@+id/Cold"
+        android:layout_width="138dp"
         android:layout_height="48dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="4dp"
         android:text="Cold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/E" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="124dp"
+        android:id="@+id/The_Adults_Toy"
+        android:layout_width="138dp"
         android:layout_height="75dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="12dp"
         android:text="The Adult's Toy"
+        app:layout_constraintBottom_toTopOf="@+id/Cold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="189dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="132dp"
+        android:id="@+id/Welcome_to_The_Love_Hospital"
+        android:layout_width="138dp"
+        android:layout_height="104dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="12dp"
         android:text="Welcome to The Love Hospital"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.339"
-        app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
+        android:id="@+id/Shironoir"
+        android:layout_width="138dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="8dp"
         android:text="Shironoir"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Cold" />
 </androidx.constraintlayout.widget.ConstraintLayout>
