--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/testCringe"
+        android:id="@+id/info_area"
         android:layout_width="192dp"
         android:layout_height="82dp"
         android:layout_marginTop="324dp"
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testCringe" />
+        app:layout_constraintTop_toBottomOf="@+id/info_area" />
 
     <Button
         android:id="@+id/thedyingmessage"
@@ -56,7 +56,7 @@
         android:id="@+id/imageView"
         android:layout_width="237dp"
         android:layout_height="220dp"
-        app:layout_constraintBottom_toTopOf="@+id/testCringe"
+        app:layout_constraintBottom_toTopOf="@+id/info_area"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
